parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> sigma
Rule 1     sigma -> VERSION
Rule 2     VERSION -> Version Article ARTICLE FinArticle
Rule 3     ARTICLE -> INFO TITLE OTRO SECTSS
Rule 4     ARTICLE -> TITLE OTRO SECTSS
Rule 5     ARTICLE -> INFO TITLE OTRO
Rule 6     ARTICLE -> TITLE OTRO
Rule 7     ARTICLE -> INFO OTRO SECTSS
Rule 8     ARTICLE -> OTRO SECTSS
Rule 9     ARTICLE -> INFO OTRO
Rule 10    ARTICLE -> OTRO
Rule 11    INFO -> Info IN_INFO FinInfo
Rule 12    IN_INFO -> IN_INFO IN_INFO
Rule 13    IN_INFO -> MEDIAOBJECT
Rule 14    IN_INFO -> ABSTRACT
Rule 15    IN_INFO -> ADDRESS
Rule 16    IN_INFO -> AUTHOR
Rule 17    IN_INFO -> DATE
Rule 18    IN_INFO -> COPYRIGHT
Rule 19    IN_INFO -> TITLE
Rule 20    TITLE -> Title IN_TITLE FinTitle
Rule 21    IN_TITLE -> IN_TITLE IN_TITLE
Rule 22    IN_TITLE -> Texto
Rule 23    IN_TITLE -> EMPHASIS
Rule 24    IN_TITLE -> LINK
Rule 25    IN_TITLE -> EMAIL
Rule 26    OTRO -> OTRO OTRO
Rule 27    OTRO -> ITEMIZEDLIST
Rule 28    OTRO -> IMPORTANT
Rule 29    OTRO -> PARA
Rule 30    OTRO -> SIMPARA
Rule 31    OTRO -> ADDRESS
Rule 32    OTRO -> MEDIAOBJECT
Rule 33    OTRO -> INFORMALTABLE
Rule 34    OTRO -> COMMENT
Rule 35    OTRO -> ABSTRACT
Rule 36    SECTSS -> SECTSS SECTSS
Rule 37    SECTSS -> SECT
Rule 38    SECTSS -> SIMPLESECT
Rule 39    SECT -> Section IN_SECT FinSection
Rule 40    IN_SECT -> INFO TITLE OTRO SECTSS
Rule 41    IN_SECT -> INFO OTRO SECTSS
Rule 42    IN_SECT -> TITLE OTRO SECTSS
Rule 43    IN_SECT -> OTRO SECTSS
Rule 44    IN_SECT -> INFO TITLE OTRO
Rule 45    IN_SECT -> INFO OTRO
Rule 46    IN_SECT -> TITLE OTRO
Rule 47    IN_SECT -> OTRO
Rule 48    SIMPLESECT -> Sect1 IN_SIM_SECT FinSect1
Rule 49    IN_SIM_SECT -> INFO TITLE OTRO
Rule 50    IN_SIM_SECT -> INFO OTRO
Rule 51    IN_SIM_SECT -> TITLE OTRO
Rule 52    IN_SIM_SECT -> OTRO
Rule 53    ITEMIZEDLIST -> Itemizedlist LISTITEM FinItemizedlist
Rule 54    LISTITEM -> LISTITEM LISTITEM
Rule 55    LISTITEM -> ListItem OTRO FinListItem
Rule 56    IMPORTANT -> Important TITLE OTRO FinImportant
Rule 57    IMPORTANT -> Important OTRO FinImportant
Rule 58    PARA -> Para IN_PARA FinPara
Rule 59    IN_PARA -> IN_PARA IN_PARA
Rule 60    IN_PARA -> Texto
Rule 61    IN_PARA -> EMPHASIS
Rule 62    IN_PARA -> LINK
Rule 63    IN_PARA -> EMAIL
Rule 64    IN_PARA -> AUTHOR
Rule 65    IN_PARA -> COMMENT
Rule 66    IN_PARA -> ITEMIZEDLIST
Rule 67    IN_PARA -> IMPORTANT
Rule 68    IN_PARA -> ADDRESS
Rule 69    IN_PARA -> MEDIAOBJECT
Rule 70    IN_PARA -> INFORMALTABLE
Rule 71    SIMPARA -> SimPara IN_SIMPARA FinSimPara
Rule 72    IN_SIMPARA -> M
Rule 73    M -> M M
Rule 74    M -> Texto
Rule 75    M -> EMPHASIS
Rule 76    M -> LINK
Rule 77    M -> EMAIL
Rule 78    M -> AUTHOR
Rule 79    M -> COMMENT
Rule 80    ADDRESS -> Address IN_ADDRESS FinAddress
Rule 81    ADDRESS -> Address FinAddress
Rule 82    IN_ADDRESS -> IN_ADDRESS IN_ADDRESS
Rule 83    IN_ADDRESS -> Texto
Rule 84    IN_ADDRESS -> STREET
Rule 85    IN_ADDRESS -> CITY
Rule 86    IN_ADDRESS -> STATE
Rule 87    IN_ADDRESS -> PHONE
Rule 88    IN_ADDRESS -> EMAIL
Rule 89    IN_ADDRESS -> POSTCODE
Rule 90    MEDIAOBJECT -> MediaObject IN_MEDIAOBJECT FinMediaObject
Rule 91    IN_MEDIAOBJECT -> INFO VID_IM
Rule 92    IN_MEDIAOBJECT -> VID_IM
Rule 93    VID_IM -> VID_IM VID_IM
Rule 94    VID_IM -> VideoObject VIDEOOBJECT FinVideoObject
Rule 95    VID_IM -> ImageObject IMAGEOBJECT FinImageObject
Rule 96    VIDEOOBJECT -> INFO VideoData
Rule 97    VIDEOOBJECT -> VideoData
Rule 98    IMAGEOBJECT -> INFO ImageData
Rule 99    IMAGEOBJECT -> ImageData
Rule 100   INFORMALTABLE -> Informaltable IN_INFTABLE FinInformaltable
Rule 101   IN_INFTABLE -> IN_INFTABLE TGROUP
Rule 102   IN_INFTABLE -> IN_INFTABLE MEDIAOBJECT
Rule 103   IN_INFTABLE -> TGROUP MEDIAOBJECT
Rule 104   IN_INFTABLE -> TGROUP
Rule 105   IN_INFTABLE -> MEDIAOBJECT TGROUP
Rule 106   TGROUP -> Tgroup THEAD TFOOT TBODY FinTgroup
Rule 107   TGROUP -> Tgroup TFOOT TBODY FinTgroup
Rule 108   TGROUP -> Tgroup THEAD TBODY FinTgroup
Rule 109   TGROUP -> Tgroup TBODY FinTgroup
Rule 110   THEAD -> Thead ROW FinThead
Rule 111   TFOOT -> Tfoot ROW FinTfoot
Rule 112   TBODY -> Tbody ROW FinTbody
Rule 113   ROW -> ROW ROW
Rule 114   ROW -> Row IN_ROW FinRow
Rule 115   IN_ROW -> IN_ROW IN_ROW
Rule 116   IN_ROW -> ENTRY
Rule 117   IN_ROW -> ENTRYTBL
Rule 118   ENTRYTBL -> Entrytbl THEAD TBODY FinEntrytbl
Rule 119   ENTRYTBL -> Entrytbl TBODY FinEntrytbl
Rule 120   ENTRY -> Entry IN_ENTRY FinEntry
Rule 121   IN_ENTRY -> IN_ENTRY IN_ENTRY
Rule 122   IN_ENTRY -> Texto
Rule 123   IN_ENTRY -> ITEMIZEDLIST
Rule 124   IN_ENTRY -> IMPORTANT
Rule 125   IN_ENTRY -> PARA
Rule 126   IN_ENTRY -> SIMPARA
Rule 127   IN_ENTRY -> ADDRESS
Rule 128   IN_ENTRY -> MEDIAOBJECT
Rule 129   IN_ENTRY -> COMMENT
Rule 130   IN_ENTRY -> ABSTRACT
Rule 131   COMMENT -> Comment M FinComment
Rule 132   ABSTRACT -> Abstract IN_ABSTRACT FinAbstract
Rule 133   IN_ABSTRACT -> TITLE PARRAFOS
Rule 134   IN_ABSTRACT -> PARRAFOS
Rule 135   PARRAFOS -> PARRAFOS PARRAFOS
Rule 136   PARRAFOS -> PARA
Rule 137   PARRAFOS -> SIMPARA
Rule 138   AUTHOR -> Author PERSONNAME FinAuthor
Rule 139   PERSONNAME -> PERSONNAME PERSONNAME
Rule 140   PERSONNAME -> FIRSTNAME
Rule 141   PERSONNAME -> SURNAME
Rule 142   FIRSTNAME -> Name DATOS FinName
Rule 143   SURNAME -> Surname DATOS FinSurname
Rule 144   DATOS -> DATOS DATOS
Rule 145   DATOS -> Texto
Rule 146   DATOS -> LINK
Rule 147   DATOS -> EMPHASIS
Rule 148   DATOS -> COMMENT
Rule 149   COPYRIGHT -> Copyright IN_COPYRIGHT FinCopyright
Rule 150   IN_COPYRIGHT -> YEAR HOLDER
Rule 151   IN_COPYRIGHT -> YEAR
Rule 152   YEAR -> Year DATOS FinYear YEAR
Rule 153   YEAR -> Year DATOS FinYear
Rule 154   HOLDER -> Holder DATOS FinHolder HOLDER
Rule 155   HOLDER -> Holder DATOS FinHolder
Rule 156   EMPHASIS -> Emphasis M FinEmphasis
Rule 157   LINK -> Link M
Rule 158   STREET -> Street DATOS FinStreet
Rule 159   CITY -> City DATOS FinCity
Rule 160   STATE -> State DATOS FinState
Rule 161   PHONE -> Phone DATOS FinPhone
Rule 162   EMAIL -> Email DATOS FinEmail
Rule 163   DATE -> Date DATOS FinDate
Rule 164   POSTCODE -> Postcode N N N N FinPostcode

Terminals, with rules where they appear

Abstract             : 132
Address              : 80 81
Article              : 2
Author               : 138
City                 : 159
Comment              : 131
Copyright            : 149
Date                 : 163
Email                : 162
Emphasis             : 156
Entry                : 120
Entrytbl             : 118 119
FinAbstract          : 132
FinAddress           : 80 81
FinArticle           : 2
FinAuthor            : 138
FinCity              : 159
FinComment           : 131
FinCopyright         : 149
FinDate              : 163
FinEmail             : 162
FinEmphasis          : 156
FinEntry             : 120
FinEntrytbl          : 118 119
FinHolder            : 154 155
FinImageObject       : 95
FinImportant         : 56 57
FinInfo              : 11
FinInformaltable     : 100
FinItemizedlist      : 53
FinListItem          : 55
FinMediaObject       : 90
FinName              : 142
FinPara              : 58
FinPhone             : 161
FinPostcode          : 164
FinRow               : 114
FinSect1             : 48
FinSection           : 39
FinSimPara           : 71
FinState             : 160
FinStreet            : 158
FinSurname           : 143
FinTbody             : 112
FinTfoot             : 111
FinTgroup            : 106 107 108 109
FinThead             : 110
FinTitle             : 20
FinVideoObject       : 94
FinYear              : 152 153
Holder               : 154 155
ImageData            : 98 99
ImageObject          : 95
Important            : 56 57
Info                 : 11
Informaltable        : 100
Itemizedlist         : 53
Link                 : 157
ListItem             : 55
MediaObject          : 90
N                    : 164 164 164 164
Name                 : 142
Para                 : 58
Phone                : 161
Postcode             : 164
Row                  : 114
Sect1                : 48
Section              : 39
SimPara              : 71
State                : 160
Street               : 158
Surname              : 143
Tbody                : 112
Texto                : 22 60 74 83 122 145
Tfoot                : 111
Tgroup               : 106 107 108 109
Thead                : 110
Title                : 20
Version              : 2
VideoData            : 96 97
VideoObject          : 94
Year                 : 152 153
error                : 

Nonterminals, with rules where they appear

ABSTRACT             : 14 35 130
ADDRESS              : 15 31 68 127
ARTICLE              : 2
AUTHOR               : 16 64 78
CITY                 : 85
COMMENT              : 34 65 79 129 148
COPYRIGHT            : 18
DATE                 : 17
DATOS                : 142 143 144 144 152 153 154 155 158 159 160 161 162 163
EMAIL                : 25 63 77 88
EMPHASIS             : 23 61 75 147
ENTRY                : 116
ENTRYTBL             : 117
FIRSTNAME            : 140
HOLDER               : 150 154
IMAGEOBJECT          : 95
IMPORTANT            : 28 67 124
INFO                 : 3 5 7 9 40 41 44 45 49 50 91 96 98
INFORMALTABLE        : 33 70
IN_ABSTRACT          : 132
IN_ADDRESS           : 80 82 82
IN_COPYRIGHT         : 149
IN_ENTRY             : 120 121 121
IN_INFO              : 11 12 12
IN_INFTABLE          : 100 101 102
IN_MEDIAOBJECT       : 90
IN_PARA              : 58 59 59
IN_ROW               : 114 115 115
IN_SECT              : 39
IN_SIMPARA           : 71
IN_SIM_SECT          : 48
IN_TITLE             : 20 21 21
ITEMIZEDLIST         : 27 66 123
LINK                 : 24 62 76 146
LISTITEM             : 53 54 54
M                    : 72 73 73 131 156 157
MEDIAOBJECT          : 13 32 69 102 103 105 128
OTRO                 : 3 4 5 6 7 8 9 10 26 26 40 41 42 43 44 45 46 47 49 50 51 52 55 56 57
PARA                 : 29 125 136
PARRAFOS             : 133 134 135 135
PERSONNAME           : 138 139 139
PHONE                : 87
POSTCODE             : 89
ROW                  : 110 111 112 113 113
SECT                 : 37
SECTSS               : 3 4 7 8 36 36 40 41 42 43
SIMPARA              : 30 126 137
SIMPLESECT           : 38
STATE                : 86
STREET               : 84
SURNAME              : 141
TBODY                : 106 107 108 109 118 119
TFOOT                : 106 107
TGROUP               : 101 103 104 105
THEAD                : 106 108 118
TITLE                : 3 4 5 6 19 40 42 44 46 49 51 56 133
VERSION              : 1
VIDEOOBJECT          : 94
VID_IM               : 91 92 93 93
YEAR                 : 150 151 152
sigma                : 0

Parsing method: LALR

state 0

    (0) S' -> . sigma
    (1) sigma -> . VERSION
    (2) VERSION -> . Version Article ARTICLE FinArticle

    Version         shift and go to state 3

    sigma                          shift and go to state 1
    VERSION                        shift and go to state 2

state 1

    (0) S' -> sigma .



state 2

    (1) sigma -> VERSION .

    $end            reduce using rule 1 (sigma -> VERSION .)


state 3

    (2) VERSION -> Version . Article ARTICLE FinArticle

    Article         shift and go to state 4


state 4

    (2) VERSION -> Version Article . ARTICLE FinArticle
    (3) ARTICLE -> . INFO TITLE OTRO SECTSS
    (4) ARTICLE -> . TITLE OTRO SECTSS
    (5) ARTICLE -> . INFO TITLE OTRO
    (6) ARTICLE -> . TITLE OTRO
    (7) ARTICLE -> . INFO OTRO SECTSS
    (8) ARTICLE -> . OTRO SECTSS
    (9) ARTICLE -> . INFO OTRO
    (10) ARTICLE -> . OTRO
    (11) INFO -> . Info IN_INFO FinInfo
    (20) TITLE -> . Title IN_TITLE FinTitle
    (26) OTRO -> . OTRO OTRO
    (27) OTRO -> . ITEMIZEDLIST
    (28) OTRO -> . IMPORTANT
    (29) OTRO -> . PARA
    (30) OTRO -> . SIMPARA
    (31) OTRO -> . ADDRESS
    (32) OTRO -> . MEDIAOBJECT
    (33) OTRO -> . INFORMALTABLE
    (34) OTRO -> . COMMENT
    (35) OTRO -> . ABSTRACT
    (53) ITEMIZEDLIST -> . Itemizedlist LISTITEM FinItemizedlist
    (56) IMPORTANT -> . Important TITLE OTRO FinImportant
    (57) IMPORTANT -> . Important OTRO FinImportant
    (58) PARA -> . Para IN_PARA FinPara
    (71) SIMPARA -> . SimPara IN_SIMPARA FinSimPara
    (80) ADDRESS -> . Address IN_ADDRESS FinAddress
    (81) ADDRESS -> . Address FinAddress
    (90) MEDIAOBJECT -> . MediaObject IN_MEDIAOBJECT FinMediaObject
    (100) INFORMALTABLE -> . Informaltable IN_INFTABLE FinInformaltable
    (131) COMMENT -> . Comment M FinComment
    (132) ABSTRACT -> . Abstract IN_ABSTRACT FinAbstract

    Info            shift and go to state 9
    Title           shift and go to state 10
    Itemizedlist    shift and go to state 20
    Important       shift and go to state 21
    Para            shift and go to state 22
    SimPara         shift and go to state 23
    Address         shift and go to state 24
    MediaObject     shift and go to state 25
    Informaltable   shift and go to state 26
    Comment         shift and go to state 27
    Abstract        shift and go to state 28

    ARTICLE                        shift and go to state 5
    INFO                           shift and go to state 6
    TITLE                          shift and go to state 7
    OTRO                           shift and go to state 8
    ITEMIZEDLIST                   shift and go to state 11
    IMPORTANT                      shift and go to state 12
    PARA                           shift and go to state 13
    SIMPARA                        shift and go to state 14
    ADDRESS                        shift and go to state 15
    MEDIAOBJECT                    shift and go to state 16
    INFORMALTABLE                  shift and go to state 17
    COMMENT                        shift and go to state 18
    ABSTRACT                       shift and go to state 19

state 5

    (2) VERSION -> Version Article ARTICLE . FinArticle

    FinArticle      shift and go to state 29


state 6

    (3) ARTICLE -> INFO . TITLE OTRO SECTSS
    (5) ARTICLE -> INFO . TITLE OTRO
    (7) ARTICLE -> INFO . OTRO SECTSS
    (9) ARTICLE -> INFO . OTRO
    (20) TITLE -> . Title IN_TITLE FinTitle
    (26) OTRO -> . OTRO OTRO
    (27) OTRO -> . ITEMIZEDLIST
    (28) OTRO -> . IMPORTANT
    (29) OTRO -> . PARA
    (30) OTRO -> . SIMPARA
    (31) OTRO -> . ADDRESS
    (32) OTRO -> . MEDIAOBJECT
    (33) OTRO -> . INFORMALTABLE
    (34) OTRO -> . COMMENT
    (35) OTRO -> . ABSTRACT
    (53) ITEMIZEDLIST -> . Itemizedlist LISTITEM FinItemizedlist
    (56) IMPORTANT -> . Important TITLE OTRO FinImportant
    (57) IMPORTANT -> . Important OTRO FinImportant
    (58) PARA -> . Para IN_PARA FinPara
    (71) SIMPARA -> . SimPara IN_SIMPARA FinSimPara
    (80) ADDRESS -> . Address IN_ADDRESS FinAddress
    (81) ADDRESS -> . Address FinAddress
    (90) MEDIAOBJECT -> . MediaObject IN_MEDIAOBJECT FinMediaObject
    (100) INFORMALTABLE -> . Informaltable IN_INFTABLE FinInformaltable
    (131) COMMENT -> . Comment M FinComment
    (132) ABSTRACT -> . Abstract IN_ABSTRACT FinAbstract

    Title           shift and go to state 10
    Itemizedlist    shift and go to state 20
    Important       shift and go to state 21
    Para            shift and go to state 22
    SimPara         shift and go to state 23
    Address         shift and go to state 24
    MediaObject     shift and go to state 25
    Informaltable   shift and go to state 26
    Comment         shift and go to state 27
    Abstract        shift and go to state 28

    TITLE                          shift and go to state 30
    OTRO                           shift and go to state 31
    ITEMIZEDLIST                   shift and go to state 11
    IMPORTANT                      shift and go to state 12
    PARA                           shift and go to state 13
    SIMPARA                        shift and go to state 14
    ADDRESS                        shift and go to state 15
    MEDIAOBJECT                    shift and go to state 16
    INFORMALTABLE                  shift and go to state 17
    COMMENT                        shift and go to state 18
    ABSTRACT                       shift and go to state 19

state 7

    (4) ARTICLE -> TITLE . OTRO SECTSS
    (6) ARTICLE -> TITLE . OTRO
    (26) OTRO -> . OTRO OTRO
    (27) OTRO -> . ITEMIZEDLIST
    (28) OTRO -> . IMPORTANT
    (29) OTRO -> . PARA
    (30) OTRO -> . SIMPARA
    (31) OTRO -> . ADDRESS
    (32) OTRO -> . MEDIAOBJECT
    (33) OTRO -> . INFORMALTABLE
    (34) OTRO -> . COMMENT
    (35) OTRO -> . ABSTRACT
    (53) ITEMIZEDLIST -> . Itemizedlist LISTITEM FinItemizedlist
    (56) IMPORTANT -> . Important TITLE OTRO FinImportant
    (57) IMPORTANT -> . Important OTRO FinImportant
    (58) PARA -> . Para IN_PARA FinPara
    (71) SIMPARA -> . SimPara IN_SIMPARA FinSimPara
    (80) ADDRESS -> . Address IN_ADDRESS FinAddress
    (81) ADDRESS -> . Address FinAddress
    (90) MEDIAOBJECT -> . MediaObject IN_MEDIAOBJECT FinMediaObject
    (100) INFORMALTABLE -> . Informaltable IN_INFTABLE FinInformaltable
    (131) COMMENT -> . Comment M FinComment
    (132) ABSTRACT -> . Abstract IN_ABSTRACT FinAbstract

    Itemizedlist    shift and go to state 20
    Important       shift and go to state 21
    Para            shift and go to state 22
    SimPara         shift and go to state 23
    Address         shift and go to state 24
    MediaObject     shift and go to state 25
    Informaltable   shift and go to state 26
    Comment         shift and go to state 27
    Abstract        shift and go to state 28

    OTRO                           shift and go to state 32
    ITEMIZEDLIST                   shift and go to state 11
    IMPORTANT                      shift and go to state 12
    PARA                           shift and go to state 13
    SIMPARA                        shift and go to state 14
    ADDRESS                        shift and go to state 15
    MEDIAOBJECT                    shift and go to state 16
    INFORMALTABLE                  shift and go to state 17
    COMMENT                        shift and go to state 18
    ABSTRACT                       shift and go to state 19

state 8

    (8) ARTICLE -> OTRO . SECTSS
    (10) ARTICLE -> OTRO .
    (26) OTRO -> OTRO . OTRO
    (36) SECTSS -> . SECTSS SECTSS
    (37) SECTSS -> . SECT
    (38) SECTSS -> . SIMPLESECT
    (26) OTRO -> . OTRO OTRO
    (27) OTRO -> . ITEMIZEDLIST
    (28) OTRO -> . IMPORTANT
    (29) OTRO -> . PARA
    (30) OTRO -> . SIMPARA
    (31) OTRO -> . ADDRESS
    (32) OTRO -> . MEDIAOBJECT
    (33) OTRO -> . INFORMALTABLE
    (34) OTRO -> . COMMENT
    (35) OTRO -> . ABSTRACT
    (39) SECT -> . Section IN_SECT FinSection
    (48) SIMPLESECT -> . Sect1 IN_SIM_SECT FinSect1
    (53) ITEMIZEDLIST -> . Itemizedlist LISTITEM FinItemizedlist
    (56) IMPORTANT -> . Important TITLE OTRO FinImportant
    (57) IMPORTANT -> . Important OTRO FinImportant
    (58) PARA -> . Para IN_PARA FinPara
    (71) SIMPARA -> . SimPara IN_SIMPARA FinSimPara
    (80) ADDRESS -> . Address IN_ADDRESS FinAddress
    (81) ADDRESS -> . Address FinAddress
    (90) MEDIAOBJECT -> . MediaObject IN_MEDIAOBJECT FinMediaObject
    (100) INFORMALTABLE -> . Informaltable IN_INFTABLE FinInformaltable
    (131) COMMENT -> . Comment M FinComment
    (132) ABSTRACT -> . Abstract IN_ABSTRACT FinAbstract

    FinArticle      reduce using rule 10 (ARTICLE -> OTRO .)
    Section         shift and go to state 37
    Sect1           shift and go to state 38
    Itemizedlist    shift and go to state 20
    Important       shift and go to state 21
    Para            shift and go to state 22
    SimPara         shift and go to state 23
    Address         shift and go to state 24
    MediaObject     shift and go to state 25
    Informaltable   shift and go to state 26
    Comment         shift and go to state 27
    Abstract        shift and go to state 28

    OTRO                           shift and go to state 33
    SECTSS                         shift and go to state 34
    SECT                           shift and go to state 35
    SIMPLESECT                     shift and go to state 36
    ITEMIZEDLIST                   shift and go to state 11
    IMPORTANT                      shift and go to state 12
    PARA                           shift and go to state 13
    SIMPARA                        shift and go to state 14
    ADDRESS                        shift and go to state 15
    MEDIAOBJECT                    shift and go to state 16
    INFORMALTABLE                  shift and go to state 17
    COMMENT                        shift and go to state 18
    ABSTRACT                       shift and go to state 19

state 9

    (11) INFO -> Info . IN_INFO FinInfo
    (12) IN_INFO -> . IN_INFO IN_INFO
    (13) IN_INFO -> . MEDIAOBJECT
    (14) IN_INFO -> . ABSTRACT
    (15) IN_INFO -> . ADDRESS
    (16) IN_INFO -> . AUTHOR
    (17) IN_INFO -> . DATE
    (18) IN_INFO -> . COPYRIGHT
    (19) IN_INFO -> . TITLE
    (90) MEDIAOBJECT -> . MediaObject IN_MEDIAOBJECT FinMediaObject
    (132) ABSTRACT -> . Abstract IN_ABSTRACT FinAbstract
    (80) ADDRESS -> . Address IN_ADDRESS FinAddress
    (81) ADDRESS -> . Address FinAddress
    (138) AUTHOR -> . Author PERSONNAME FinAuthor
    (163) DATE -> . Date DATOS FinDate
    (149) COPYRIGHT -> . Copyright IN_COPYRIGHT FinCopyright
    (20) TITLE -> . Title IN_TITLE FinTitle

    MediaObject     shift and go to state 25
    Abstract        shift and go to state 28
    Address         shift and go to state 24
    Author          shift and go to state 47
    Date            shift and go to state 48
    Copyright       shift and go to state 49
    Title           shift and go to state 10

    IN_INFO                        shift and go to state 39
    MEDIAOBJECT                    shift and go to state 40
    ABSTRACT                       shift and go to state 41
    ADDRESS                        shift and go to state 42
    AUTHOR                         shift and go to state 43
    DATE                           shift and go to state 44
    COPYRIGHT                      shift and go to state 45
    TITLE                          shift and go to state 46

state 10

    (20) TITLE -> Title . IN_TITLE FinTitle
    (21) IN_TITLE -> . IN_TITLE IN_TITLE
    (22) IN_TITLE -> . Texto
    (23) IN_TITLE -> . EMPHASIS
    (24) IN_TITLE -> . LINK
    (25) IN_TITLE -> . EMAIL
    (156) EMPHASIS -> . Emphasis M FinEmphasis
    (157) LINK -> . Link M
    (162) EMAIL -> . Email DATOS FinEmail

    Texto           shift and go to state 51
    Emphasis        shift and go to state 55
    Link            shift and go to state 56
    Email           shift and go to state 57

    IN_TITLE                       shift and go to state 50
    EMPHASIS                       shift and go to state 52
    LINK                           shift and go to state 53
    EMAIL                          shift and go to state 54

state 11

    (27) OTRO -> ITEMIZEDLIST .

    Section         reduce using rule 27 (OTRO -> ITEMIZEDLIST .)
    Sect1           reduce using rule 27 (OTRO -> ITEMIZEDLIST .)
    Itemizedlist    reduce using rule 27 (OTRO -> ITEMIZEDLIST .)
    Important       reduce using rule 27 (OTRO -> ITEMIZEDLIST .)
    Para            reduce using rule 27 (OTRO -> ITEMIZEDLIST .)
    SimPara         reduce using rule 27 (OTRO -> ITEMIZEDLIST .)
    Address         reduce using rule 27 (OTRO -> ITEMIZEDLIST .)
    MediaObject     reduce using rule 27 (OTRO -> ITEMIZEDLIST .)
    Informaltable   reduce using rule 27 (OTRO -> ITEMIZEDLIST .)
    Comment         reduce using rule 27 (OTRO -> ITEMIZEDLIST .)
    Abstract        reduce using rule 27 (OTRO -> ITEMIZEDLIST .)
    FinArticle      reduce using rule 27 (OTRO -> ITEMIZEDLIST .)
    FinImportant    reduce using rule 27 (OTRO -> ITEMIZEDLIST .)
    FinSection      reduce using rule 27 (OTRO -> ITEMIZEDLIST .)
    FinSect1        reduce using rule 27 (OTRO -> ITEMIZEDLIST .)
    FinListItem     reduce using rule 27 (OTRO -> ITEMIZEDLIST .)


state 12

    (28) OTRO -> IMPORTANT .

    Section         reduce using rule 28 (OTRO -> IMPORTANT .)
    Sect1           reduce using rule 28 (OTRO -> IMPORTANT .)
    Itemizedlist    reduce using rule 28 (OTRO -> IMPORTANT .)
    Important       reduce using rule 28 (OTRO -> IMPORTANT .)
    Para            reduce using rule 28 (OTRO -> IMPORTANT .)
    SimPara         reduce using rule 28 (OTRO -> IMPORTANT .)
    Address         reduce using rule 28 (OTRO -> IMPORTANT .)
    MediaObject     reduce using rule 28 (OTRO -> IMPORTANT .)
    Informaltable   reduce using rule 28 (OTRO -> IMPORTANT .)
    Comment         reduce using rule 28 (OTRO -> IMPORTANT .)
    Abstract        reduce using rule 28 (OTRO -> IMPORTANT .)
    FinArticle      reduce using rule 28 (OTRO -> IMPORTANT .)
    FinImportant    reduce using rule 28 (OTRO -> IMPORTANT .)
    FinSection      reduce using rule 28 (OTRO -> IMPORTANT .)
    FinSect1        reduce using rule 28 (OTRO -> IMPORTANT .)
    FinListItem     reduce using rule 28 (OTRO -> IMPORTANT .)


state 13

    (29) OTRO -> PARA .

    Section         reduce using rule 29 (OTRO -> PARA .)
    Sect1           reduce using rule 29 (OTRO -> PARA .)
    Itemizedlist    reduce using rule 29 (OTRO -> PARA .)
    Important       reduce using rule 29 (OTRO -> PARA .)
    Para            reduce using rule 29 (OTRO -> PARA .)
    SimPara         reduce using rule 29 (OTRO -> PARA .)
    Address         reduce using rule 29 (OTRO -> PARA .)
    MediaObject     reduce using rule 29 (OTRO -> PARA .)
    Informaltable   reduce using rule 29 (OTRO -> PARA .)
    Comment         reduce using rule 29 (OTRO -> PARA .)
    Abstract        reduce using rule 29 (OTRO -> PARA .)
    FinArticle      reduce using rule 29 (OTRO -> PARA .)
    FinImportant    reduce using rule 29 (OTRO -> PARA .)
    FinSection      reduce using rule 29 (OTRO -> PARA .)
    FinSect1        reduce using rule 29 (OTRO -> PARA .)
    FinListItem     reduce using rule 29 (OTRO -> PARA .)


state 14

    (30) OTRO -> SIMPARA .

    Section         reduce using rule 30 (OTRO -> SIMPARA .)
    Sect1           reduce using rule 30 (OTRO -> SIMPARA .)
    Itemizedlist    reduce using rule 30 (OTRO -> SIMPARA .)
    Important       reduce using rule 30 (OTRO -> SIMPARA .)
    Para            reduce using rule 30 (OTRO -> SIMPARA .)
    SimPara         reduce using rule 30 (OTRO -> SIMPARA .)
    Address         reduce using rule 30 (OTRO -> SIMPARA .)
    MediaObject     reduce using rule 30 (OTRO -> SIMPARA .)
    Informaltable   reduce using rule 30 (OTRO -> SIMPARA .)
    Comment         reduce using rule 30 (OTRO -> SIMPARA .)
    Abstract        reduce using rule 30 (OTRO -> SIMPARA .)
    FinArticle      reduce using rule 30 (OTRO -> SIMPARA .)
    FinImportant    reduce using rule 30 (OTRO -> SIMPARA .)
    FinSection      reduce using rule 30 (OTRO -> SIMPARA .)
    FinSect1        reduce using rule 30 (OTRO -> SIMPARA .)
    FinListItem     reduce using rule 30 (OTRO -> SIMPARA .)


state 15

    (31) OTRO -> ADDRESS .

    Section         reduce using rule 31 (OTRO -> ADDRESS .)
    Sect1           reduce using rule 31 (OTRO -> ADDRESS .)
    Itemizedlist    reduce using rule 31 (OTRO -> ADDRESS .)
    Important       reduce using rule 31 (OTRO -> ADDRESS .)
    Para            reduce using rule 31 (OTRO -> ADDRESS .)
    SimPara         reduce using rule 31 (OTRO -> ADDRESS .)
    Address         reduce using rule 31 (OTRO -> ADDRESS .)
    MediaObject     reduce using rule 31 (OTRO -> ADDRESS .)
    Informaltable   reduce using rule 31 (OTRO -> ADDRESS .)
    Comment         reduce using rule 31 (OTRO -> ADDRESS .)
    Abstract        reduce using rule 31 (OTRO -> ADDRESS .)
    FinArticle      reduce using rule 31 (OTRO -> ADDRESS .)
    FinImportant    reduce using rule 31 (OTRO -> ADDRESS .)
    FinSection      reduce using rule 31 (OTRO -> ADDRESS .)
    FinSect1        reduce using rule 31 (OTRO -> ADDRESS .)
    FinListItem     reduce using rule 31 (OTRO -> ADDRESS .)


state 16

    (32) OTRO -> MEDIAOBJECT .

    Section         reduce using rule 32 (OTRO -> MEDIAOBJECT .)
    Sect1           reduce using rule 32 (OTRO -> MEDIAOBJECT .)
    Itemizedlist    reduce using rule 32 (OTRO -> MEDIAOBJECT .)
    Important       reduce using rule 32 (OTRO -> MEDIAOBJECT .)
    Para            reduce using rule 32 (OTRO -> MEDIAOBJECT .)
    SimPara         reduce using rule 32 (OTRO -> MEDIAOBJECT .)
    Address         reduce using rule 32 (OTRO -> MEDIAOBJECT .)
    MediaObject     reduce using rule 32 (OTRO -> MEDIAOBJECT .)
    Informaltable   reduce using rule 32 (OTRO -> MEDIAOBJECT .)
    Comment         reduce using rule 32 (OTRO -> MEDIAOBJECT .)
    Abstract        reduce using rule 32 (OTRO -> MEDIAOBJECT .)
    FinArticle      reduce using rule 32 (OTRO -> MEDIAOBJECT .)
    FinImportant    reduce using rule 32 (OTRO -> MEDIAOBJECT .)
    FinSection      reduce using rule 32 (OTRO -> MEDIAOBJECT .)
    FinSect1        reduce using rule 32 (OTRO -> MEDIAOBJECT .)
